--- a/source/form.html
+++ b/source/form.html
@@ -7,114 +7,116 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="page-wrapper">
-      <header class="page-header">
-        <div class="page-header__wrapper page-header__wrapper--inner">
-          <a class="page-header__logo" href="index.html">
-            <img class="page-header__logo-img page-header__logo-img--inner" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
-          </a>
-          <nav class="main-nav">
-            <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
-            <ul class="main-nav__list">
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="index.html">Главная</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="photo.html">Фотографии</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="form.html">Конкурс</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="#">HTML Academy</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+    <header class="page-header page-header--inner">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo" href="index.html">
+          <img class="page-header__logo-img page-header__logo-img--inner" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
+        </a>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
         <h1 class="page-header__title">Конкурс на самое безбашенное путешествие с Пинк</h1>
-      </header>
-      <main class="page-main">
-        <form class="page-form" method="post" action="https://echo.htmlacademy.ru">
-          <p class="page-form__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
-          <div class="page-form__wrapper">
-            <fieldset class="form-group">
-              <label class="field-text">
-                <span class="field-text__label">Фамилия:</span>
-                <input class="field-text__input" type="text" name="name" placeholder="Укажите фамилию *">
-              </label>
-              <label class="field-text">
-                <span class="field-text__label">Имя:</span>
-                <input class="field-text__input" type="text" name="name" placeholder="Введите ваше имя *">
-              </label>
-              <label class="field-text">
-                <span class="field-text__label">Отчество:</span>
-                <input class="field-text__input" type="text" name="name" placeholder="Ну и отчество тоже">
-              </label>
-            </fieldset>
-            <fieldset class="form-group">
-              <legend class="form-group__title">Ваши безбашенные достижения в путешествии</legend>
-              <label class="field-checkbox">
-                <span class="field-checkbox__label">Сделал селфи с акулой</span>
-                <input class="field-checkbox__input visually-hidden" type="checkbox" name="Сделал селфи с акулой">
-              </label>
-              <label class="field-checkbox">
-                <span class="field-checkbox__label">Обгорел на пляже</span>
-                <input class="field-checkbox__input visually-hidden" type="checkbox" name="Обгорел на пляже">
-              </label>
-              <label class="field-checkbox">
-                <span class="field-checkbox__label">Видел Чака Норриса</span>
-                <input class="field-checkbox__input visually-hidden" type="checkbox" name="Видел Чака Норриса">
-              </label>
-              <label class="field-checkbox">
-                <span class="field-checkbox__label">Накупил сувениров</span>
-                <input class="field-checkbox__input visually-hidden" type="checkbox" name="Накупил сувениров">
-              </label>
-              <label class="field-checkbox">
-                <span class="field-checkbox__label">Удержал башню</span>
-                <input class="field-checkbox__input visually-hidden" type="checkbox" name="Удержал башню">
-              </label>
-              <label class="field-checkbox">
-                <span class="field-checkbox__label">Разгромил отель</span>
-                <input class="field-checkbox__input visually-hidden" type="checkbox" name="Разгромил отель">
-              </label>
-            </fieldset>
-            <fieldset class="form-group">
-              <label class="field-text">
-                <span class="field-text__label">Номер телефона</span>
-                <input class="field-text__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
-              </label>
-              <label class="field-text">
-                <span class="field-text__label">Адрес почты</span>
-                <input class="field-text__input" type="email" name="email" placeholder="Введите почту *">
-              </label>
-            </fieldset>
-            <fieldset class="form-group">
-              <legend class="form-group__title">С каким приложением путешествовали?</legend>
-              <label class="field-radio">
-                <span class="field-radio__label">Pink для iOS</span>
-                <input class="field-radio__input visually-hidden" type="radio" name="app">
-              </label>
-              <label class="field-radio">
-                <span class="field-radio__label">Pink на Android</span>
-                <input class="field-radio__input visually-hidden" type="radio" name="app">
-              </label>
-              <label class="field-radio">
-                <span class="field-radio__label">Windows Phone</span>
-                <input class="field-radio__input visually-hidden" type="radio" name="app">
-              </label>
-            </fieldset>
-            <fieldset class="form-group">
-              <legend class="form-group__title">Опишите свои эмоции</legend>
-              <textarea class="field-textarea" name="message" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
-            </fieldset>
-          </div>
+      </div>
+    </header>
+    <main class="page-main">
+      <form class="page-form" method="post" action="https://echo.htmlacademy.ru">
+        <p class="page-form__text">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</p>
+        <div class="page-form__wrapper">
+          <fieldset class="form-group">
+            <label class="field-text">
+              <span class="field-text__label">Фамилия:</span>
+              <input class="field-text__input" type="text" name="name" placeholder="Укажите фамилию *">
+            </label>
+            <label class="field-text">
+              <span class="field-text__label">Имя:</span>
+              <input class="field-text__input" type="text" name="name" placeholder="Введите ваше имя *">
+            </label>
+            <label class="field-text">
+              <span class="field-text__label">Отчество:</span>
+              <input class="field-text__input" type="text" name="name" placeholder="Ну и отчество тоже">
+            </label>
+          </fieldset>
+          <fieldset class="form-group form-group--bg-grey">
+            <legend class="form-group__title">Ваши безбашенные достижения в путешествии</legend>
+            <label class="field-checkbox">
+              <span class="field-checkbox__label">Сделал селфи с акулой</span>
+              <input class="field-checkbox__input visually-hidden" type="checkbox" name="Сделал селфи с акулой">
+            </label>
+            <label class="field-checkbox">
+              <span class="field-checkbox__label">Обгорел на пляже</span>
+              <input class="field-checkbox__input visually-hidden" type="checkbox" name="Обгорел на пляже">
+            </label>
+            <label class="field-checkbox">
+              <span class="field-checkbox__label">Видел Чака Норриса</span>
+              <input class="field-checkbox__input visually-hidden" type="checkbox" name="Видел Чака Норриса">
+            </label>
+            <label class="field-checkbox">
+              <span class="field-checkbox__label">Накупил сувениров</span>
+              <input class="field-checkbox__input visually-hidden" type="checkbox" name="Накупил сувениров">
+            </label>
+            <label class="field-checkbox">
+              <span class="field-checkbox__label">Удержал башню</span>
+              <input class="field-checkbox__input visually-hidden" type="checkbox" name="Удержал башню">
+            </label>
+            <label class="field-checkbox">
+              <span class="field-checkbox__label">Разгромил отель</span>
+              <input class="field-checkbox__input visually-hidden" type="checkbox" name="Разгромил отель">
+            </label>
+          </fieldset>
+          <fieldset class="form-group">
+            <label class="field-text">
+              <span class="field-text__label">Номер телефона</span>
+              <input class="field-text__input" type="tel" name="tel" placeholder="Номер, пожалуйста">
+            </label>
+            <label class="field-text">
+              <span class="field-text__label">Адрес почты</span>
+              <input class="field-text__input" type="email" name="email" placeholder="Введите почту *">
+            </label>
+          </fieldset>
+          <fieldset class="form-group form-group--bg-grey">
+            <legend class="form-group__title">С каким приложением путешествовали?</legend>
+            <label class="field-radio">
+              <span class="field-radio__label">Pink для iOS</span>
+              <input class="field-radio__input visually-hidden" type="radio" name="app">
+            </label>
+            <label class="field-radio">
+              <span class="field-radio__label">Pink на Android</span>
+              <input class="field-radio__input visually-hidden" type="radio" name="app">
+            </label>
+            <label class="field-radio">
+              <span class="field-radio__label">Windows Phone</span>
+              <input class="field-radio__input visually-hidden" type="radio" name="app">
+            </label>
+          </fieldset>
+          <fieldset class="form-group">
+            <legend class="form-group__title">Опишите свои эмоции</legend>
+            <textarea class="field-textarea" rows="5" name="message" placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+          </fieldset>
+        </div>
+        <div class="page-form__wrapper-bottom">
           <button class="field-action btn" type="submit">Отправить форму</button>
-          <p class="page-form__text">
+          <p class="page-form__text page-form__text--bottom">
             <span class="page-form__note">*</span>— обязательные поля
           </p>
-        </form>
-      </main>
-      <footer class="page-footer">
+        </div>
+      </form>
+    </main>
+    <footer class="page-footer">
+      <div class="page-footer__wrapper">
         <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="146" height="40" alt="" >
         <section class="page-footer__socials socials">
           <h3 class="visually-hidden">Социальные сети</h3>
@@ -133,7 +135,7 @@
         <p class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
