--- a/source/index.html
+++ b/source/index.html
@@ -7,31 +7,38 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="page-wrapper">
-      <header class="page-header">
-        <div class="page-header__wrapper">
-          <a class="page-header__logo">
-            <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
-          </a>
-          <nav class="main-nav main-nav--closed">
-            <button class="main-nav__toggle" type="button" aria-label="Открыть меню"></button>
-            <ul class="main-nav__list">
-              <li class="main-nav__item">
-                <a class="main-nav__link">Главная</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="photo.html">Фотографии</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="form.html">Конкурс</a>
-              </li>
-              <li class="main-nav__item">
-                <a class="main-nav__link" href="#">HTML Academy</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <section class="download">
+    <header class="page-header">
+      <div class="page-header__wrapper">
+        <a class="page-header__logo">
+          <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
+        </a>
+        <nav class="main-nav main-nav--opened">
+          <button class="main-nav__toggle visually-hidden" type="button" aria-label="Открыть меню"></button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item main-nav__item--top">
+              <a class="main-nav__link main-nav__link--top" main-nav__link href="#">
+                <img class="page-header__logo-img" src="img/logo-pink-white-mobile.svg" width="74" height="23" alt="Приложение Pink">
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="photo.html">Фотографии</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">Конкурс</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="#">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="page-main">
+      <section class="download">
+        <div class="download__wrapper">
           <p class="download__title">Взгляните на жизнь иначе!</p>
           <a class="download__btn btn" href="#">Скачать приложение</a>
           <ul class="download__list">
@@ -45,13 +52,15 @@
               <a class="download__link download__link--windows" href="#" aria-label="windows"></a>
             </li>
           </ul>
-            <p class="download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
-        </section>
-      </header>
-      <main class="page-main">
-        <section class="features">
+          <p class="download__text">Доступно для iPhone, iPad, Android, Windows Phone, OS X, Windows 8</p>
+        </div>
+      </section>
+      <section class="features">
+        <div class="features__wrapper-slogan">
           <p class="features__slogan">Устали от серости мегаполиса?</p>
           <p class="features__slogan">Нам есть, что вам предложить!</p>
+        </div>
+        <div class="features__wrapper-list">
           <ul class="features__list">
             <li class="features__item">
               <h3 class="features__title">Поднимает настроение</h3>
@@ -66,61 +75,65 @@
               <p class="features__description">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
             </li>
           </ul>
-          <div class="features__addition">
+        </div>
+        <div class="features__addition">
+          <div class="features__wrapper-text">
             <p class="features__title">Эффект на 24 часа!</p>
             <p class="features__description">Британские ученые провели исследования и доказали, что положительный эффект от использования приложения длится целые сутки!</p>
             <a class="features__link" href="#">Узнать больше об исследовании</a>
           </div>
-        </section>
-        <section class="reviews slider">
-          <ul class="reviews__list slider__list">
-            <li class="reveiws__item slider__item">
-              <b class="reviews__author">Николай Петров</b>
-              <b class="reviews__author-addition">25 лет, водитель трамвая</b>
-              <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
-            </li>
-          </ul>
-          <p class="reviews__toggles slider__toggles">
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-          </p>
-        </section>
-        <section class="price slider">
-          <div class="price__hit"></div>
-          <table class="price__table">
-            <tr class="price__item">
-              <th class="price__title price__title-addition price__title-addition--empty"></th>
-              <th class="price__title price__title-addition">База<br>1,99 USD</th>
-              <th class="price__title">Стандарт<br>3,99 USD</th>
-              <th class="price__title price__title-addition">Анлим<br>9,99 USD</th>
-            </tr>
-            <tr class="price__item">
-              <td class="price__text">Розовый фильтр</td>
-              <td class="price__text"></td>
-              <td class="price__text"></td>
-              <td class="price__text"></td>
-            </tr>
-            <tr class="price__item">
-              <td class="price__text">Смайлики</td>
-              <td class="price__text"></td>
-              <td class="price__text"></td>
-              <td class="price__text"></td>
-            </tr>
-            <tr class="price__item">
-              <td class="price__text">Комментарии</td>
-              <td class="price__text"></td>
-              <td class="price__text"></td>
-              <td class="price__text"></td>
-            </tr>
-          </table>
-          <p class="price__toggles slider__toggles">
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-            <button class="slider__toggle" type="button"></button>
-          </p>
-        </section>
-        <section class="contacts">
+        </div>
+      </section>
+      <section class="reviews slider">
+        <ul class="reviews__list slider__list">
+          <li class="reveiws__item slider__item">
+            <b class="reviews__author">Николай Петров</b>
+            <b class="reviews__author-addition">25 лет, водитель трамвая</b>
+            <p class="reviews__text">«Это приложение перевернуло мой мир и позволило по-новому взглянуть на привычные серые вещи! А еще я познакомился со своей будущей женой в комментариях к выложенной фотографии!»</p>
+          </li>
+        </ul>
+        <p class="reviews__toggles slider__toggles">
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+        </p>
+      </section>
+      <section class="price slider">
+        <div class="price__hit"></div>
+        <table class="price__table">
+          <tr class="price__item">
+            <th class="price__title price__title-addition price__title-addition--empty"></th>
+            <th class="price__title price__title-addition">База<br>1,99 USD</th>
+            <th class="price__title">Стандарт<br>3,99 USD</th>
+            <th class="price__title price__title-addition">Анлим<br>9,99 USD</th>
+          </tr>
+          <tr class="price__item">
+            <td class="price__text">Розовый фильтр</td>
+            <td class="price__text"></td>
+            <td class="price__text"></td>
+            <td class="price__text"></td>
+          </tr>
+          <tr class="price__item">
+            <td class="price__text">Смайлики</td>
+            <td class="price__text"></td>
+            <td class="price__text"></td>
+            <td class="price__text"></td>
+          </tr>
+          <tr class="price__item">
+            <td class="price__text">Комментарии</td>
+            <td class="price__text"></td>
+            <td class="price__text"></td>
+            <td class="price__text"></td>
+          </tr>
+        </table>
+        <p class="price__toggles slider__toggles">
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+          <button class="slider__toggle" type="button"></button>
+        </p>
+      </section>
+      <section class="contacts">
+        <div class="contacts__wrapper">
           <h2 class="contacts__title">Остались вопросы? Свяжитесь с нами!</h2>
           <ul class="contacts__list">
             <li class="contacts__item">
@@ -136,12 +149,14 @@
               <p class="contacts__info">ул. БольшаяКонюшенная, 19/8</p>
             </li>
           </ul>
-          <div class="map">
-            <iframe class="map__frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412368!2d30.320894615666827!3d59.938796869048424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1512663593314" allowfullscreen></iframe>
-          </div>
-        </section>
-      </main>
-      <footer class="page-footer page-footer--index">
+        </div>
+        <div class="map">
+          <iframe class="map__frame" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.598942412368!2d30.320894615666827!3d59.938796869048424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1512663593314" allowfullscreen></iframe>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer page-footer--index">
+      <div class="page-footer__wrapper">
         <img class="page-footer__logo" src="img/logo-pink-blue-mobile.svg" width="146" height="40" alt="" >
         <section class="page-footer__socials socials">
           <h3 class="visually-hidden">Социальные сети</h3>
@@ -160,7 +175,7 @@
         <p class="page-footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Разработано</a>
         </p>
-      </footer>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
